2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show an NSPushOnPushOff button,
	as well as a disabled button.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSWindowStyleMask-test/NSWindowStyleMask-test.m: Tweak to allow
	creating NSPanels, and allow setting the new NSWindow and NSPanel
	style masks.
	Also added a close button and descriptive label to the created
	windows.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Add NSPopUpButton and NSComboBox

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show some NSSegmentedControls

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* GNUmakefile:
	* NSButton-test/NSButton-test.m:
	* testList.h: Enable the NSButton test. Modify the test to show off
	all of the bezel styles.

2009-12-16  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile:
	* NSOpenPanel-test/GNUmakefile:
	* NSOpenPanel-test/NSOpenPanel-test.m: Add demo/test for the Open
	panel. The test has been adapted from the Save panel test.

2009-12-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* NSSavePanel-test/NSSavePanel-test.m: Add field to supply a list
	of allowed file type extension to the save panel and a button to
	control whether the panel allows other file type extensions.

2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>

	* NSOutlineView-test/NSOutlineView-test.m: Added new expandable items
	to better test drop above at multiple levels on the same row.

2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>

	* NSOutlineView-test/NSOutlineView-test.m: Reindented more sensibly and 
	rearranged a bit the if else statements logic to be simpler.

2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>

	* Composite-test/GNUmakefile: Updated definition of
	BUNDLE_INSTALL_DIR to use GNUSTEP_LIBRARY instead of
	GNUSTEP_INSTALLATION_DIR.
	* CoordinateCheck-test/GNUmakefile: Same change.